force-app/main/default/objects/Webinar_Feedback__c/Webinar_Feedback__c.object-meta.xml
<CustomObject>
    <label>WebinarFeedback</label>
    <nameField>
        <label>WebinarFeedback</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WebinarFeedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>