force-app/main/default/objects/Webinar_Feedback__c/fields/FutureNotification__c.field-meta.xml
<CustomField>
    <fullName>FutureNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FutureNotification</label>
    <type>Checkbox</type>
</CustomField>