force-app/main/default/objects/Webinar_Feedback__c/fields/SatisfactionScore__c.field-meta.xml
<CustomField>
    <fullName>SatisfactionScore__c</fullName>
    <label>SatisfactionScore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>