force-app/main/default/objects/Webinar_Feedback__c/fields/School_District_Name__c.field-meta.xml
<CustomField>
    <fullName>School_District_Name__c</fullName>
    <label>School District Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>