force-app/main/default/objects/Webinar_Feedback__c/fields/Webinar_Title__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Title__c</fullName>
    <label>Webinar Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>