force-app/main/default/objects/Webinar_Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Timestamp__c</columns>
    <columns>SatisfactionScore__c</columns>
    <columns>Suggestions__c</columns>
    <columns>FutureNotification__c</columns>
    <columns>Comments__c</columns>
    <columns>Email__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Job_Title__c</columns>
    <columns>School_District_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>